manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <NAMESPACE>

  labels:
    app.kubernetes.io/name: <APP_NAME>
    app.kubernetes.io/managed-by: kubectl
    app.kubernetes.io/part-of: terraform-k8s

  annotations:
    description: Application namespace
