manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <APP_NAME>
  namespace: <NAMESPACE>

  labels:
    app.kubernetes.io/name: <APP_NAME>
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: terraform-k8s

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: <APP_NAME>

  ports:
    - name: http
      protocol: TCP

      port: 80

      targetPort: http
